--- a/app/templates/mto-single-vehicle.html
+++ b/app/templates/mto-single-vehicle.html
@@ -15,7 +15,7 @@
                             <div class="col-xl-4">
                                 <div class="card mb-4">
                                     <div class="card-header">
-                                        <i class="fas fa-chart-area mr-1"></i>
+                                        <i class="fas fa-clock mr-1"></i>
                                         Mileage Alert
                                     </div>
                                     <div class="card-body">
@@ -60,7 +60,7 @@
                             <div class="col-xl-8">
                                 <div class="card mb-4" id="information">
                                     <div class="card-header">
-                                        <i class="fas fa-chart-bar mr-1"></i>
+                                        <i class="fas fa-table mr-1"></i>
                                         Information
                                     </div>
                                     <div class="card-body">
@@ -70,102 +70,118 @@
                                             <div class="col-md-3">
                                                 <div class="form-group">
                                                     <label class="small mb-1" for="make">Make</label>
-                                                    <input required class="form-control py-2" id="make" name="make" type="text" placeholder="Make" value="{{vehicle.make}}" />
+                                                    <input readonly required class="form-control py-2" id="make" name="make" type="text" placeholder="Make" value="{{vehicle.make}}" />
                                                 </div>
                                             </div>
                                             
                                             <div class="col-md-3">
                                                 <div class="form-group">
                                                     <label class="small mb-1" for="model">Model</label>
-                                                    <input required class="form-control py-2" id="model" name="model" type="text" placeholder="Model" value="{{vehicle.model}}"/>
+                                                    <input readonly required class="form-control py-2" id="model" name="model" type="text" placeholder="Model" value="{{vehicle.model}}"/>
                                                 </div>
                                             </div>
                                             
                                             <div class="col-md-3">
                                                 <div class="form-group">
                                                     <label class="small mb-1" for="type">Type</label>
-                                                    <input required class="form-control py-2" id="type" name="type" type="text" placeholder="Type" value="{{vehicle.type}}" />
+                                                    <input readonly required class="form-control py-2" id="type" name="type" type="text" placeholder="Type" value="{{vehicle.type}}" />
                                                 </div>
                                             </div>
                                             
                                             <div class="col-md-3">
                                                 <div class="form-group">
                                                     <label class="small mb-1" for="trim">Trim</label>
-                                                    <input required class="form-control py-2" id="trim" name="trim" type="text" placeholder="Trim" value="{{vehicle.trim}}" />
+                                                    <input readonly required class="form-control py-2" id="trim" name="trim" type="text" placeholder="Trim" value="{{vehicle.trim}}" />
                                                 </div>
                                             </div>
                                             
                                             <div class="col-md-2">
                                                 <div class="form-group">
                                                     <label class="small mb-1" for="year">Year</label>
-                                                    <input required class="form-control py-2" id="year" name="year" type="number" placeholder="Year" value="{{vehicle.year}}" />
+                                                    <input readonly required class="form-control py-2" id="year" name="year" type="number" placeholder="Year" value="{{vehicle.year}}" />
                                                 </div>
                                             </div>
                                             
                                             <div class="col-md-2">
                                                 <div class="form-group">
                                                     <label class="small mb-1" for="mileage">Mileage</label>
-                                                    <input required class="form-control py-2" id="mileage" name="mileage" type="number" placeholder="Mileage" value="{{vehicle.mileage}}" />
+                                                    <input readonly required class="form-control py-2" id="mileage" name="mileage" type="number" placeholder="Mileage" value="{{vehicle.mileage}}" />
                                                 </div>
                                             </div>
                                             
                                             <div class="col-md-2">
                                                 <div class="form-group">
                                                     <label class="small mb-1" for="lifespan">Lifespan</label>
-                                                    <input required class="form-control py-2" id="lifespan" name="lifespan" type="number" placeholder="Lifespan" value="{{vehicle.lifespan}}" />
+                                                    <input readonly required class="form-control py-2" id="lifespan" name="lifespan" type="number" placeholder="Lifespan" value="{{vehicle.lifespan}}" />
                                                 </div>
                                             </div>
                                             
                                             <div class="col-md-2">
                                                 <div class="form-group">
                                                     <label class="small mb-1" for="lifespan">Remaining Life</label>
-                                                    <input required class="form-control py-2" id="remainingLife" name="remainingLife" type="number" placeholder="remainingLife" value="{{vehicle.remaining_life()}}" readonly />
+                                                    <input readonly required class="form-control py-2" id="remainingLife" name="remainingLife" type="number" placeholder="remainingLife" value="{{vehicle.remaining_life()}}" readonly />
                                                 </div>
                                             </div>
                                             
                                             <div class="col-md-2">
                                                 <div class="form-group">
                                                     <label class="small mb-1" for="chassis_no">Chassis N0</label>
-                                                    <input required class="form-control py-2" id="chassis_no" name="chassis_no" type="text" placeholder="Chassis N0" value="{{vehicle.chassis_no}}" />
+                                                    <input readonly required class="form-control py-2" id="chassis_no" name="chassis_no" type="text" placeholder="Chassis N0" value="{{vehicle.chassis_no}}" />
                                                 </div>
                                             </div>
                                             
                                             <div class="col-md-2">
                                                 <div class="form-group">
                                                     <label class="small mb-1" for="chassis_no">Engine N0</label>
-                                                    <input required class="form-control py-2" id="engine_no" name="engine_no" type="text" placeholder="Engine N0" value="{{vehicle.engine_no}}" />
+                                                    <input readonly required class="form-control py-2" id="engine_no" name="engine_no" type="text" placeholder="Engine N0" value="{{vehicle.engine_no}}" />
                                                 </div>
                                             </div>
                                             
                                             <div class="col-md-3">
                                                 <div class="form-group">
                                                     <label class="small mb-1" for="chassis_no">Supplier</label>
-                                                    <input required class="form-control py-2" id="supplier" name="supplier" type="text" placeholder="Supplier" value="{{vehicle.supplier}}" />
+                                                    <input readonly required class="form-control py-2" id="supplier" name="supplier" type="text" placeholder="Supplier" value="{{vehicle.supplier}}" />
                                                 </div>
                                             </div>
                                             
                                             <div class="col-md-3">
                                                 <div class="form-group">
                                                     <label class="small mb-1" for="chassis_no">Contract Reference</label>
-                                                    <input required class="form-control py-2" id="contract_reference" name="contract_reference" type="text" placeholder="Contract Reference" value="{{vehicle.contract_reference}}" />
+                                                    <input readonly required class="form-control py-2" id="contract_reference" name="contract_reference" type="text" placeholder="Contract Reference" value="{{vehicle.contract_reference}}" />
                                                 </div>
                                             </div>
                                             
                                             <div class="col-md-3">
                                                 <div class="form-group">
                                                     <label class="small mb-1" for="chassis_no">Date</label>
-                                                    <input required class="form-control py-2" id="date" name="date" type="date" placeholder="Date" value="{{vehicle.date}}" />
+                                                    <input readonly required class="form-control py-2" id="date" name="date" type="date" placeholder="Date" value="{{vehicle.date}}" />
                                                 </div>
                                             </div>
                                             
                                             <div class="col-md-3">
                                                 <div class="form-group">
+                                                    <label class="small mb-1" for="service">Serviceability</label>
+                                                    <select required class="form-control py-2" name="service" id="service">
+                                                            {% for s in ['Serviceable', 'Unserviceable', 'Beyond Economic Repairs'] %}
+                                                            {% if vehicle.service == s %}
+                                                                <option selected value="{{s}}">{{s}}</option>
+                                                            {% else %}
+                                                                <option value="{{s}}">{{s}}</option>
+                                                            {% endif %}
+                                                            {% endfor %}
+                                                    </select>
+                                                </div>
+                                            </div> 
+                                            
+                                            <div class="col-md-12">
+                                                <div class="form-group">
                                                     <label class="small mb-1" for="chassis_no">Remarks</label>
-                                                    <input required class="form-control py-2" id="remark" name="remark" type="text" placeholder="Remarks" value="{{vehicle.remarks}}"/>
+                                                    <textarea readonly required class="form-control py-2" id="remark" name="remark" placeholder="Remarks">{{vehicle.remarks}}</textarea>
                                                 </div>
                                             </div>
                                             
                                         </div>
+                                        <div class="form-group mt-4 mb-0"><button class="btn btn-primary btn-block" id="updateVehicle" vehicleId="{{vehicle.id}}">Update</button></div>
                                     </form>
                                 </div>
                                 </div>
