--- a/app/templates/admin-single-vehicle.html
+++ b/app/templates/admin-single-vehicle.html
@@ -49,102 +49,117 @@
                                     <div class="card-body">
                                         <form method="POST" id="vehicleForm">
                                             <div class="form-row">
-                                                
+                                            
                                                 <div class="col-md-3">
                                                     <div class="form-group">
                                                         <label class="small mb-1" for="make">Make</label>
-                                                        <input required class="form-control py-2" id="make" name="make" type="text" placeholder="Make" value="{{vehicle.make}}" />
+                                                        <input  required class="form-control py-2" id="make" name="make" type="text" placeholder="Make" value="{{vehicle.make}}" />
                                                     </div>
                                                 </div>
                                                 
                                                 <div class="col-md-3">
                                                     <div class="form-group">
                                                         <label class="small mb-1" for="model">Model</label>
-                                                        <input required class="form-control py-2" id="model" name="model" type="text" placeholder="Model" value="{{vehicle.model}}"/>
+                                                        <input  required class="form-control py-2" id="model" name="model" type="text" placeholder="Model" value="{{vehicle.model}}"/>
                                                     </div>
                                                 </div>
                                                 
                                                 <div class="col-md-3">
                                                     <div class="form-group">
                                                         <label class="small mb-1" for="type">Type</label>
-                                                        <input required class="form-control py-2" id="type" name="type" type="text" placeholder="Type" value="{{vehicle.type}}" />
+                                                        <input  required class="form-control py-2" id="type" name="type" type="text" placeholder="Type" value="{{vehicle.type}}" />
                                                     </div>
                                                 </div>
                                                 
                                                 <div class="col-md-3">
                                                     <div class="form-group">
                                                         <label class="small mb-1" for="trim">Trim</label>
-                                                        <input required class="form-control py-2" id="trim" name="trim" type="text" placeholder="Trim" value="{{vehicle.trim}}" />
+                                                        <input  required class="form-control py-2" id="trim" name="trim" type="text" placeholder="Trim" value="{{vehicle.trim}}" />
                                                     </div>
                                                 </div>
                                                 
                                                 <div class="col-md-2">
                                                     <div class="form-group">
                                                         <label class="small mb-1" for="year">Year</label>
-                                                        <input required class="form-control py-2" id="year" name="year" type="number" placeholder="Year" value="{{vehicle.year}}" />
+                                                        <input  required class="form-control py-2" id="year" name="year" type="number" placeholder="Year" value="{{vehicle.year}}" />
                                                     </div>
                                                 </div>
                                                 
                                                 <div class="col-md-2">
                                                     <div class="form-group">
                                                         <label class="small mb-1" for="mileage">Mileage</label>
-                                                        <input required class="form-control py-2" id="mileage" name="mileage" type="number" placeholder="Mileage" value="{{vehicle.mileage}}" />
+                                                        <input  required class="form-control py-2" id="mileage" name="mileage" type="number" placeholder="Mileage" value="{{vehicle.mileage}}" />
                                                     </div>
                                                 </div>
                                                 
                                                 <div class="col-md-2">
                                                     <div class="form-group">
                                                         <label class="small mb-1" for="lifespan">Lifespan</label>
-                                                        <input required class="form-control py-2" id="lifespan" name="lifespan" type="number" placeholder="Lifespan" value="{{vehicle.lifespan}}" />
+                                                        <input  required class="form-control py-2" id="lifespan" name="lifespan" type="number" placeholder="Lifespan" value="{{vehicle.lifespan}}" />
                                                     </div>
                                                 </div>
                                                 
                                                 <div class="col-md-2">
                                                     <div class="form-group">
                                                         <label class="small mb-1" for="lifespan">Remaining Life</label>
-                                                        <input required class="form-control py-2" id="remainingLife" name="remainingLife" type="number" placeholder="remainingLife" value="{{vehicle.remaining_life()}}" readonly />
+                                                        <input  required class="form-control py-2" id="remainingLife" name="remainingLife" type="number" placeholder="remainingLife" value="{{vehicle.remaining_life()}}" readonly />
                                                     </div>
                                                 </div>
                                                 
                                                 <div class="col-md-2">
                                                     <div class="form-group">
                                                         <label class="small mb-1" for="chassis_no">Chassis N0</label>
-                                                        <input required class="form-control py-2" id="chassis_no" name="chassis_no" type="text" placeholder="Chassis N0" value="{{vehicle.chassis_no}}" />
+                                                        <input  required class="form-control py-2" id="chassis_no" name="chassis_no" type="text" placeholder="Chassis N0" value="{{vehicle.chassis_no}}" />
                                                     </div>
                                                 </div>
                                                 
                                                 <div class="col-md-2">
                                                     <div class="form-group">
                                                         <label class="small mb-1" for="chassis_no">Engine N0</label>
-                                                        <input required class="form-control py-2" id="engine_no" name="engine_no" type="text" placeholder="Engine N0" value="{{vehicle.engine_no}}" />
+                                                        <input  required class="form-control py-2" id="engine_no" name="engine_no" type="text" placeholder="Engine N0" value="{{vehicle.engine_no}}" />
                                                     </div>
                                                 </div>
                                                 
                                                 <div class="col-md-3">
                                                     <div class="form-group">
                                                         <label class="small mb-1" for="chassis_no">Supplier</label>
-                                                        <input required class="form-control py-2" id="supplier" name="supplier" type="text" placeholder="Supplier" value="{{vehicle.supplier}}" />
+                                                        <input  required class="form-control py-2" id="supplier" name="supplier" type="text" placeholder="Supplier" value="{{vehicle.supplier}}" />
                                                     </div>
                                                 </div>
                                                 
                                                 <div class="col-md-3">
                                                     <div class="form-group">
                                                         <label class="small mb-1" for="chassis_no">Contract Reference</label>
-                                                        <input required class="form-control py-2" id="contract_reference" name="contract_reference" type="text" placeholder="Contract Reference" value="{{vehicle.contract_reference}}" />
+                                                        <input  required class="form-control py-2" id="contract_reference" name="contract_reference" type="text" placeholder="Contract Reference" value="{{vehicle.contract_reference}}" />
                                                     </div>
                                                 </div>
                                                 
                                                 <div class="col-md-3">
                                                     <div class="form-group">
                                                         <label class="small mb-1" for="chassis_no">Date</label>
-                                                        <input required class="form-control py-2" id="date" name="date" type="date" placeholder="Date" value="{{vehicle.date}}" />
+                                                        <input  required class="form-control py-2" id="date" name="date" type="date" placeholder="Date" value="{{vehicle.date}}" />
                                                     </div>
                                                 </div>
                                                 
                                                 <div class="col-md-3">
                                                     <div class="form-group">
+                                                        <label class="small mb-1" for="service">Serviceability</label>
+                                                        <select required class="form-control py-2" name="service" id="service">
+                                                                {% for s in ['Serviceable', 'Unserviceable', 'Beyond Economic Repairs'] %}
+                                                                {% if vehicle.service == s %}
+                                                                    <option selected value="{{s}}">{{s}}</option>
+                                                                {% else %}
+                                                                    <option value="{{s}}">{{s}}</option>
+                                                                {% endif %}
+                                                                {% endfor %}
+                                                        </select>
+                                                    </div>
+                                                </div> 
+                                                
+                                                <div class="col-md-12">
+                                                    <div class="form-group">
                                                         <label class="small mb-1" for="chassis_no">Remarks</label>
-                                                        <input required class="form-control py-2" id="remark" name="remark" type="text" placeholder="Remarks" value="{{vehicle.remarks}}"/>
+                                                        <textarea  required class="form-control py-2" id="remark" name="remark" placeholder="Remarks">{{vehicle.remarks}}</textarea>
                                                     </div>
                                                 </div>
                                                 
