--- a/app/templates/mto-dashboard.html
+++ b/app/templates/mto-dashboard.html
@@ -11,7 +11,7 @@
                             <li class="breadcrumb-item active">Dashboard</li>
                         </ol>
                         <div class="row">
-                            <div class="col-xl-4 col-md-6">
+                            <div class="col-xl-3 col-md-6">
                                 <div class="card bg-primary text-white mb-4">
                                     <div class="card-body">All Vehicles {{allocated|length}}</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
@@ -20,7 +20,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-4 col-md-6">
+                            <div class="col-xl-3 col-md-6">
                                 <div class="card bg-warning text-white mb-4">
                                     <div class="card-body">Serviceable Vehicles {{serviceable|length}}</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
@@ -29,9 +29,18 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-4 col-md-6">
+                            <div class="col-xl-3 col-md-6">
                                 <div class="card bg-success text-white mb-4">
                                     <div class="card-body">Unserviceable Vehicles {{unserviceable|length}}</div>
+                                    <div class="card-footer d-flex align-items-center justify-content-between">
+                                        <a class="small text-white stretched-link" href="/vehicles">View Details</a>
+                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-md-6">
+                                <div class="card bg-danger text-white mb-4">
+                                    <div class="card-body">Beyond Economic Repairs {{ber|length}}</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
                                         <a class="small text-white stretched-link" href="/vehicles">View Details</a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
